# tel

./: .gitignore  Cargo.toml  base256-spec.md  bintel-spec.md  readme.md  spec.md  tel-schema.tel
demo/: README.md  atom-forms-document.tel  atom-forms-schema.tel  contact-document.tel  contact-layered-composed.tel  contact-layered-document.tel  contact-layered-schema.tel  contact-schema.tel  document-stream.tel  mutations.md  struct-validator-document.tel  struct-validator-schema.tel  tel-schema.bintel.hex  tel-schema.hash  walkthrough.md
design/base256/: codec.py  decode.sh  mapping.tsv  mapping.tsv2  mapping.tsv3  mapping.tsv4  mapping.tsv5  out2.txt  out2.txt.lz4  select.py  select2.py
examples/: README.md  contact-document.tel
lsp/: .gitignore  Makefile  build.mill  readme.md
palimpsest/: spec.md
palimpsest/src/: lib.rs
ref/base256/: Cargo.toml
ref/js/: base256.js  base256.test.js  (+4 more)
ref/tree-sitter-tel/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package.json
ref/tree-sitter-tel/bindings/node/: binding.cc  index.js
ref/tree-sitter-tel/bindings/rust/: build.rs  lib.rs
ref/tree-sitter-tel/queries/: highlights.scm
ref/tree-sitter-tel/src/: grammar.json  node-types.json  parser.c  scanner.c
ref/tree-sitter-tel/test/corpus/: atoms.txt  comments.txt  compounds.txt  gaps.txt  pragma.txt  remark.txt  tabulation.txt
spec/: base256.md  bintel.md  palimpsest.md  tel.md
src/: base256.rs  lib.rs
zed/: .gitignore  Cargo.toml  README.md  extension.toml
zed/languages/tel/: config.toml  highlights.scm  injections.scm
zed/src/: lib.rs
(+139 files in other folders)
