# Standalone workspace: the enclosing repo root is a Cargo workspace for the Rust reference
# implementation, but this extension is built independently (by Zed, and by `cargo` here).
[workspace]

[package]
name = "zed_tel"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
