[package]
name = "tree-sitter-tel"
description = "tree-sitter grammar for TEL (Typed Element Language)"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
keywords = ["incremental", "parsing", "tree-sitter", "tel"]
categories = ["parser-implementations", "parsing"]
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
